Added changes related to affectbased paper

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
                     About Me
                 </div>
                 <div class="me_brief">
-                    Graduated recently from the Technion’s computer science department. I’m interested in cognitive computing, machine learning and robotics. These days I’m looking forward for my next opportunity.
+                    Graduated recently from the Technion Computer Science department. I’m mainly interested in Machine Learning and Robotics research. Soon I will begin my graduate studies at the Technion Computer Science department.
                 </div>
                 <div class="me_brief">
-                    During my undergraduate studies, I had the opportunity to do research, propose scientific contibutions and gain experience while working in the intersection of fields such as robotics and computer vision. The projects I have been working on are also described in this website.
+                    During my undergraduate studies, I had the opportunity to do research, propose scientific contributions and gain experience while working at the intersection of Robotics and Computer Vision. The projects I have been working on are also described on this website.
                 </div>
             </div>
 
