--- a/publications.html
+++ b/publications.html
@@ -143,7 +143,7 @@
 
         <div class="paper">
             <div class="paper_title">
-                Affect-based Intrinsic Rewards for Learning General Representations
+                Affect-based Intrinsic Rewards for Exploration and Learning
             </div>
 
             <div class="paper_publication">
