affect based video update

--- a/publications.html
+++ b/publications.html
@@ -151,7 +151,7 @@
             </div>
 
             <div class="paper_media">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/jJvSXyegVSM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/Z9LNOV1c__A" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
 
             <div class="paper_link">
