--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     About Me
                 </div>
                 <div class="me_brief">
-                    Graduated recently from the Technion Computer Science department. I’m mainly interested in Machine Learning and Robotics research. Soon I will begin my graduate studies at the Technion Computer Science department.
+                    Graduate student at the Technion Computer Science department. Nowadays, I'm working on research related to rehabilitation robotics, under the mentorship of Prof. Alex Bronstein and Prof. Alon Wolf. My interests also contain autonomous machines and medical robots.
                 </div>
                 <div class="me_brief">
                     During my undergraduate studies, I had the opportunity to do research, propose scientific contributions and gain experience while working at the intersection of Robotics and Computer Vision. The projects I have been working on are also described on this website.
