--- a/publications.html
+++ b/publications.html
@@ -143,15 +143,15 @@
 
         <div class="paper">
             <div class="paper_title">
-                Affect-based Intrinsic Rewards for Exploration and Learning
+                Modeling Affect-based Intrinsic Rewards for Exploration and Learning
             </div>
 
             <div class="paper_publication">
-                In review
+                ICRA 2021
             </div>
 
             <div class="paper_media">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/Z9LNOV1c__A" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/YNv8CEaOx8I" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
 
             <div class="paper_link">
@@ -179,7 +179,7 @@
             <div class="paper_citation_code" id="affectbased_citation" style="display: none;">
                 <pre><code>
 @article{zadok2019affect,
-    title={Affect-based Intrinsic Rewards for Learning General Representations},
+    title={Affect-based Intrinsic Rewards for Exploration and Learning},
     author={Zadok, Dean and McDuff, Daniel and Kapoor, Ashish},
     journal={arXiv preprint arXiv:1912.00403},
     year={2019}
